--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,12 @@
         "type_traits": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "__hash_table": "cpp",
+        "array": "cpp",
+        "cmath": "cpp",
+        "complex": "cpp",
+        "sstream": "cpp",
+        "unordered_map": "cpp"
     }
 }
